# Microvisor-Demo-Http

./: CMakeLists.txt  Dockerfile  README.md  deploy.sh  docker-entrypoint.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  app_version.h.in  app_version.in  http.c  http.h  logging.c  logging.h  main.c  main.h  network.c  network.h  uart_logging.c  uart_logging.h  work.md
app_src/: CMakeLists.txt  logging.c  logging.h  main.c  main.h
config/: FreeRTOSConfig.h
